# ray2048

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-multi-platform.yml
game_2048/: CMakeLists.txt
game_2048/src/: game.cc  game.h  logic.cc  logic.h  main.cc  main.h  widgets.cc  widgets.h  window.cc  window.h
